# FDR

./: Dockerfile  falcon_data_replicator.ini  falcon_data_replicator.py  pyproject.toml  requirements.txt
ocsf/: ocsf.py
standalone/: falcon_data_replicator.py
