[project]
name = "fdr"
version = "0.1.0"
requires-python = ">=3.9"
dependencies = [
    "aws-assume-role-lib>=2.10.0",
    "boto3>=1.24.70",
    "fastparquet>=0.8.3",
    "filelock>=3.8.0",
    "json2parquet>=2.0.0",
    "numpy>=1.22.2",
    "pyarrow>=14.0.1",
    "pydantic-settings>=2.10.1",
    "pyyaml>=6.0",
]

[dependency-groups]
dev = [
    "isort>=6.0.1",
    "mypy>=1.17.0",
    "pip-audit>=2.9.0",
    "pyright>=1.1.403",
    "pytest>=8.4.1",
    "pytest-cov>=6.2.1",
    "pytest-mock>=3.14.1",
    "ruff>=0.12.7",
    "ptpython>=3.0.30",
    "sqlfluff>=3.4.2",
    "sqlfluff-templater-dbt>=3.4.2",
    "djlint>=1.36.4",
]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
ignore = [
    "D212",
    "E501", # line too long, handled by black
    "B008", # do not perform function calls in argument defaults
    "C901", # too complex
    "W191", # indentation contains tabs
    "B904", # raise ... from ...
]
select = [
    "E", # pycodestyle errors
    "W", # pycodestyle warnings
    "F", # pyflakes
    "I", # isort
    "B", # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]

[tool.ruff.lint.isort]
known-third-party = ["fastapi", "pydantic", "starlette"]

[tool.ruff.format]
indent-style = "space"
line-ending = "lf"
quote-style = "double"

[tool.ruff.lint.pydocstyle]
convention = "google"
